--- a/style.css
+++ b/style.css
@@ -270,3 +270,11 @@ a {
       font-size: 15px;
     }  
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+}
