--- a/style.css
+++ b/style.css
@@ -278,8 +278,8 @@ a {
         background-repeat: no-repeat;
       }
     .game { 
-        width: 95%;
-        height: 100%;
+        width: 55%;
+        height: 600px;
     }
 
 }
