--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 }
 
 body  {
-    
     height: 100vh; /* Imposta l'altezza del body al 100% dell'altezza del viewport */
     background-image: url(images/background-fixed.jpg);
     background-size: cover;
@@ -24,6 +23,7 @@ body  {
 /* DIV in which you start */
 #startcontainer {
     width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     background-image: url(images/fire.jpg);
