--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ body  {
 
 /* console game */
 .game {
-/*     background-image: url(images/background-fixed.jpg);
+    background-image: url(images/background-fixed.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     height: 530px;
     display: flex;
     flex-direction: row;
