--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body  {
 /* DIV in which you start */
 #startcontainer {
     width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     background-image: url(images/fire.jpg);
