--- a/style.css
+++ b/style.css
@@ -216,7 +216,10 @@ a {
 @media only screen and (max-width: 572px) {
     body {
         height: 100%; /* Imposta l'altezza del body al 100% dell'altezza del viewport */
-      }
+    }
+    #startcontainer {
+        height: 100vh;
+    }
 }
 /* @media only screen and (max-width: 1000px) {
     body { /* la finestra non possa ridursi al di sotto di 1000px di larghezza */
