--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ a {
 @media only screen and (max-width: 572px) {
     body {
         height: 100%; /* Imposta l'altezza del body al 100% dell'altezza del viewport */
+        overflow: hidden;
     }
     #startcontainer {
         height: 100vh;
