--- a/style.css
+++ b/style.css
@@ -235,6 +235,10 @@ a {
         background-position: center;
         background-repeat: no-repeat;
     }
+    #endcontainer {
+        height: 100vh;
+    }
+
 }
 /* @media only screen and (max-width: 1000px) {
     body { /* la finestra non possa ridursi al di sotto di 1000px di larghezza */
