--- a/style.css
+++ b/style.css
@@ -221,22 +221,8 @@ a {
     }
     
     body  {
-        height: 100vh; /* Imposta l'altezza del body al 100% dell'altezza del viewport */
+        height: 100%; /* Imposta l'altezza del body al 100% dell'altezza del viewport */
         overflow: hidden;
-    }
-    
-    /* DIV in which you start */
-    #startcontainer {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        background-image: url(images/fire.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    #endcontainer {
-        height: 100vh;
     }
 
 }
