--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body  {
 
 /* DIV in which you start */
 #startcontainer {
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
