--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root {
+-:root {
     --clrprimary: #fff;
     --clrsecondary: #7B0003;
     --fontprimary: 'Heavy Weight Gamer', sans-serif;
@@ -64,7 +64,7 @@ body  {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
