--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body  {
     justify-content: center;
     background-color: var(--clrsecondary);
     width: 100%;
-    margin: 0;
+/*     margin: 0; */
 }
   
 #title {
@@ -197,6 +197,7 @@ body  {
 
 footer {
     width: 100%;
+    height: 100%;
     font-family: var(--fontsecondary);
     font-size: 20px;
     background-color: #22161E;
