--- a/style.css
+++ b/style.css
@@ -5,32 +5,34 @@
     --fontsecondary: 'Pixelony', sans-serif;
 }
 
-html,
-body  {
+* {
     padding: 0;
     margin: 0;
-    height: 100%;
+    box-sizing: border-box;
+}
+
+body,
+html {
+    height: 100vh; /*Imposta l'altezza del body al 100% dell'altezza del viewport*/
     overflow: hidden;
-    background-image: url(images/background-fixed.jpg);
-    background-size: cover;
-    background-position: center;
 }
 
 /* DIV in which you start */
 #startcontainer {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     background-image: url(images/fire.jpg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 #startbutton {
     background-color: var(--clrsecondary);
-    min-width: 250px;
-    height: 95px;
+    height: 80px;
+    min-width: 230px;
     padding: 5px;
     border: none;
     outline: none;
@@ -61,9 +63,10 @@ body  {
 
 /*Includes the main divs: 'header', 'game' and 'footer'*/
 #endcontainer {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -71,13 +74,14 @@ body  {
 .header {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: var(--clrsecondary);
     width: 100%;
-    margin: 0;
+    height: 20%;
 }
   
 #title {
-    font-size: 35px;
+    font-size: 40px;
     color: var(--clrprimary);
     font-family: var(--fontprimary);
     letter-spacing: 10px;
@@ -85,11 +89,15 @@ body  {
 
 /* console game */
 .game {
-    height: 530px;
+    background-image: url(images/background-fixed.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: row;
-    padding: 20px;
-    gap: 30px;
+    padding: 10px 30px;
+    gap: 35px;
 }
 
 /* main Div 'player' and 'computer' */
@@ -111,7 +119,7 @@ body  {
     font-size: 45px;
     text-align: center;
     letter-spacing: 3px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 /*primary Div img + btns*/
@@ -120,18 +128,18 @@ body  {
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 20px;
+    gap: 20px; /*spazio tra i riquadri '.btns'*/
 }
 
 /*secondary div img + btns */
 .btns {
-    width: 30%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 20px; /*spazio tra img e btn*/
 }
 
 /*Individual RPS button */
@@ -145,13 +153,13 @@ body  {
     background-color: #333;
     cursor: pointer;
     border-radius: 10px;
-    width: 100%;
+    width: 85%;
     height: 45px;
 }
 
 /*Result display */
 .result {
-    width: 190%;
+    width: 140%;
     color: var(--clrprimary);
     display: flex;
     flex-direction: column;
@@ -161,37 +169,44 @@ body  {
     text-transform: uppercase;
 }
 
+.play-again {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#play-again {
+    width: 120%;
+    height: 45px;
+    font-family: var(--fontsecondary);
+    font-size: 15px;
+    letter-spacing: 1.5px;
+    color: black;
+    background-color: var(--clrprimary);
+    border: 4px solid var(--clrsecondary);
+    border-radius: 6px;
+    margin-bottom: 20px;
+    box-shadow: 5px 4px 0px black;
+}
+
 /* Score display */
 #scoreD {
     font-family: 'MALDINI', sans-serif;
     font-size: 30px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     padding: 10px;
 }
 
 /*0 - 0*/
 #score { 
     font-size: 75px;
-    margin: 0;
-}
-
-#play-again {
-    width: 35%;
-    height: 50px;
-    font-family: var(--fontsecondary);
-    font-size: 15px;
-    letter-spacing: 1.5px;
-    justify-content: center;
-    color: black;
-    background-color: var(--clrprimary);
-    border: 5px solid var(--clrsecondary);
-    border-radius: 6px;
-    margin: 15px;
-    box-shadow: 6px 5px 0px black;
+    margin-bottom: 25px;
 }
 
 footer {
     width: 100%;
+    height: 10%;
     font-family: var(--fontsecondary);
     font-size: 20px;
     background-color: #22161E;
@@ -209,59 +224,70 @@ a {
 
 /* ---------------------------------------------------------------------------------------------------- */
 /*small screens*/
-@media only screen and (max-width: 1000px) {
-    body { /* la finestra non possa ridursi al di sotto di 1000px di larghezza */
-        min-width: 1000px;
-        overflow-x: hidden;
-      }
+@media only screen and (max-width: 800px) {
 
     #title {
-        font-size: 35px;
+        font-size: 25px;
+        text-align: center;
     }
 
-    .game { 
-        width: 95%;
-        height: 522px;
+    .game {
+        padding: 10px;
         gap: 0;
     }
 
     #move {
         width: 100%;
-        font-size: 30px;
-        margin-bottom: 10px;
+        font-size: 25px;
+        margin-bottom: 15px;
     }
-
+    
     .div {
-        width: 35%;
+        width: 30%;
         flex-direction: column;
-        gap: 20px;
+        gap: 15px;
     }
 
     .btns {
-        width: 65%;
         gap: 10px;
-        margin: 0;
     }
 
     .button3 {
-        width: 180%;
+        font-size: 10px;
+        width: 200%;
         height: 35px;
     }
 
     .result {
-        width: 90%;
+        width: 200%;
     }
 
-    #scoreD {
-        font-size: 20px;
-    }
-
-    #score {
-        font-size: 75px;
-    }
-  
     #play-again {
-        width: 55%;
-      font-size: 15px;
-    }  
+        width: 120%;
+        height: 45px;
+        font-size: 15px;
+    }
+    #scoreD {
+        width: 100%;
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    #score { 
+        width: 100%;
+        font-size: 40px;
+        margin-bottom: 15px;
+    }
+
+    footer {
+        font-size: 15px;
+        gap: 5px;
+    }
 }
+
+/* @media only screen and (max-width: 900px) {
+    body { // fa in modo che la finestra non possa ridursi al di sotto di 900px di larghezza
+        min-width: 900px;
+        overflow-x: hidden;
+    }
+} */
